# JavaDiscordWebsite

./: .gitignore  .htaccess  Cargo.toml  README.md  index.html  next.config.js  package-lock.json  package.json  redirects  rules.html  soon.html  unban.html
JavaDiscord/: home.html  index.html  rules.html
JavaDiscord/css/: queries.css  styles.css
assets/css/: global.css
assets/css/components/: navbar.css
assets/css/pages/: home.css
components/: Footer.js  Footer.tsx  Navbar.js  Navbar.tsx
css/: footer.css  global.css  navbar.css  queries.css  styles.css
css/global/: footer.css  navbar.css  styles.css
css/pages/error/: 403.css  404.css
css/pages/index/: index.css  indexFooter.css  indexResponsive.css
css/pages/rules/: rules.css
css/redirects/: styles.css
css/sites/: home.css
error/: 403.html  404.html
pages/: 404.js  404.tsx  _app.js  _app.tsx  index.js  index.tsx  profile.tsx  rules.js  rules.tsx
pages/api/auth/: [...nextauth].ts
r/: dc-community-guidelines.html  dc-nicknames.html  dc-threads.html  dc-tos.html  discord4j.html  github.html  jetbrains.html  join.html  nordvpn.html  nowhere.html  twitter.html  website-gh.html
redirect/: discord4j.html  jetbrains.html  nordvpn.html
src/: main.rs
src/components/: navbar.rs
src/pages/: home.rs
src/redirects/: github.rs  join.rs  mod.rs  twitter.rs
styles/: error.module.css  footer.module.css  global.css  index.module.css  navbar.module.css  profile.module.css  rules.module.css
utils/: Types.ts
